docs: update translations based on review suggestions

--- a/fa/01.md
+++ b/fa/01.md
@@ -52,7 +52,7 @@
   * این همچنین به این معنی است که کنترل نسخه Git با بزرگتر شدن پروژه‌ها و بیشتر شدن فایل‌ها کند نمی‌شود.
 * محافظت از سوابق تاریخی
   * در فرآیند کنترل نسخه Git، هر Commit یک شماره hash id تولید می‌کند و هر نسخه در فرآیند تغییر به این hash id ارجاع می‌دهد. تا زمانی که hash id مطابقت نداشته باشد، Git کار نخواهد کرد. بنابراین با بزرگتر شدن پروژه و Clone شدن نسخه‌های بیشتری از مخزن، شما به سختی می‌توانید محتوای فایل یا سوابق نسخه را دستکاری کنید.
-  * **به یاد داشته باشید: همه یک مخزن کامل دارند. اگر نسخه اصلی را تغییر دهید، مخزن هیچ‌کس دیگر نمی‌تواند به مخزن اصلی مرجوع شود، بنابراین به سختی می‌توانید سوابق نسخه را به طور خودسرانه دستکاری کنید.**
+  * **به یاد داشته باشید: همه یک مخزن کامل دارند. اگر نسخه اصلی را تغییر دهید، مخزن هیچ‌کس دیگر نمی‌تواند به مخزن اصلی ارجاع داده شود، بنابراین به سختی می‌توانید سوابق نسخه را به طور خودسرانه دستکاری کنید.**
 * طراحی مبتنی بر ابزار (Toolkit-based design)
   * گیت به عنوان مجموعه‌ای از نرم‌افزارهای ابزاری (ابزارهای خط فرمان) طراحی شده است. شما می‌توانید به راحتی استفاده از ابزارهای مختلف را با انعطاف‌پذیری فوق‌العاده ترکیب کنید.
 * استراتژی‌های ادغام پلاگین‌پذیر (Pluggable merge strategies)
