--- a/fa/02.md
+++ b/fa/02.md
@@ -32,7 +32,7 @@
 
 ![image](figures/02/106.png)
 
-* انتخاب اجزاء (components). **توصیه می‌شود گزینه Windows Explorer integration را غیرفعال کنید!** <br>(از آنجایی که این ابزار ادغام خیلی ابتدایی است، توصیه می‌شود به جای آن از ابزار [TortoiseGit](https://code.google.com/p/tortoisegit/) استفاده کنید.)
+* انتخاب اجزاء (components). **توصیه می‌شود گزینه Windows Explorer integration را غیرفعال کنید!** <br>(از آنجایی که این ابزار ادغام خیلی ابتدایی است، توصیه می‌شود به جای آن از ابزار [TortoiseGit](https://tortoisegit.org/) استفاده کنید.)
 
 ![image](figures/02/107.png)
 
