--- a/fa/04.md
+++ b/fa/04.md
@@ -81,7 +81,7 @@ git add .
 
 ![image](figures/04/05.png)
 
-**توجه**: وایلدکارد `.*` نمی‌تواند تمام فایل‌های "نقطه‌دار" را اضافه کند زیرا اولین کاراکتر `.` فقط می‌تواند با یک دایرکتوری مطابقت داشته باشد. اگر می‌خواهید تمام فایل‌هایی را که با نقطه شروع می‌شوند اضافه کنید، باید از `.??*` استفاده کنید تا مطمئن شوید که با فایل‌هایی که با نقطه شروع می‌شوند مطابقت دارد.
+**توجه**: وایلدکارد `.*` نمی‌تواند به درستی تمام فایل‌های "نقطه‌دار" را اضافه کند، زیرا در بسیاری از پوسته‌ها (shells) با دایرکتوری‌های `.` و `..` نیز مطابقت پیدا می‌کند. برای جلوگیری از این مشکل و انتخاب فایل‌هایی که با نقطه شروع می‌شوند، می‌توانید از الگوی دقیق‌تری مانند `.??*` استفاده کنید.
 
 ## ثبت تغییرات (Committing Changes)
 
