--- a/fa/08.md
+++ b/fa/08.md
@@ -18,7 +18,7 @@
 
 این وضعیتِ شاخه‌سازی و ادغام در همه جای فرآیند کنترل نسخه Git وجود دارد. مخازن راه دور می‌توانند شاخه داشته باشند، مخازن محلی می‌توانند شاخه داشته باشند. شما می‌توانید از هر شاخه راه دور در یک شاخه محلی ادغام (pull) کنید، یا می‌توانید یک شاخه محلی را به یک شاخه راه دور push کنید. البته می‌توانید از هر شاخه محلی در شاخه محلی دیگری نیز ادغام انجام دهید. می‌توان تصور کرد که اگر "شاخه‌سازی" منطق کنترل خوبی نداشته باشد، در نهایت می‌توانید انواع سناریوهای کنترل نسخه فوق‌العاده پیچیده را ترکیب کنید که چیزی نیست که همه بخواهند ببینند. بنابراین، یادگیری خوب "شاخه‌سازی" و "ادغام" واقعاً مهم است. به عنوان مثال، git-flow یک مدل مدیریت شاخه بسیار محبوب است. این یک ابزار نیست، بلکه منطقی برای مدیریت شاخه‌ها است. من این بخش را در مقالات آینده خود توضیح خواهم داد.
 
-در طول توسعه هسته لینوکس، ده‌هفتاد هزار توسعه‌دهنده از سراسر جهان با هم مشارکت داشتند. به منظور مدیریت چنین تیم توسعه بزرگی، Git متولد شد. این یک مکانیزم کنترل نسخه توزیع شده است. همه یک نسخه کامل دارند. پس از توزیع نسخه، همه باید نسخه خود را مدیریت کنند و سپس بر اساس نیازهای تیم آن را ادغام کنند. با این حال، قبل از ادغام مجدد، این مکانیزم تضمین می‌کند که همه می‌توانند به راحتی توسعه دهند بدون اینکه تحت تأثیر نسخه هیچ توسعه‌دهنده دیگری قرار بگیرند. Git واقعاً این کار را انجام داده و در عین حال پیچیدگی کنترل نسخه را نیز کاهش داده است.
+در طول توسعه هسته لینوکس، ده‌ها هزار توسعه‌دهنده از سراسر جهان با هم مشارکت داشتند. به منظور مدیریت چنین تیم توسعه بزرگی، Git متولد شد. این یک مکانیزم کنترل نسخه توزیع شده است. همه یک نسخه کامل دارند. پس از توزیع نسخه، همه باید نسخه خود را مدیریت کنند و سپس بر اساس نیازهای تیم آن را ادغام کنند. با این حال، قبل از ادغام مجدد، این مکانیزم تضمین می‌کند که همه می‌توانند به راحتی توسعه دهند بدون اینکه تحت تأثیر نسخه هیچ توسعه‌دهنده دیگری قرار بگیرند. Git واقعاً این کار را انجام داده و در عین حال پیچیدگی کنترل نسخه را نیز کاهش داده است.
 
 البته باید این را هم بگویم که اگر تیمی که در توسعه نرم‌افزار مشارکت می‌کند فقط دو یا سه نفر باشد و این افراد هنوز با هم باشند، در واقع نیازی به استفاده از کنترل نسخه Git نیست. استفاده از Subversion هم انتخاب بسیار خوبی است، ساده و بصری. اگر در طول فرآیند توسعه با مشکلی مواجه شدید، با هماهنگی با اطرافیانتان قابل حل است. این بسیار راحت‌تر از این است که کل تیم را وادار به درک Git کنید.
 
