--- a/fa/14.md
+++ b/fa/14.md
@@ -94,7 +94,7 @@ git config --global core.autocrlf false
 
 **راه حل**: هنگام تنظیم گزینه‌های سطح سیستم (`--system`)، همیشه Command Prompt را به عنوان Administrator اجرا کنید تا مطمئن شوید تنظیمات در کل سیستم اعمال می‌شوند.
 
-برای اطلاعات بیشتر: [VirtualStore - درون کنترل حساب کاربریِ ویندوز ویستا](https://learn.microsoft.com/en-us/previous-versions/technet-magazine/cc138019(v=msdn.10))
+برای اطلاعات بیشتر: [VirtualStore - درون کنترل حساب کاربریِ ویندوز ویستا](<https://learn.microsoft.com/en-us/previous-versions/technet-magazine/cc138019(v=msdn.10)>)
 
 ## پیکربندی نام‌های مستعار (Aliases)
 
